--작업 완료 내역-- MyPage_SelectRefundAccountActivity - 환불계좌 클릭 시 대표환불계좌 바뀌게끔 수정.
PersnoalPayment - 스토리보드 수정으로 인한 다수의 변경작업.
PersnoalPayment_MainFragment - QR코드 , 바코드 생성 및 터치시 애니메이션 효과 구현
PersnoalPayment_ScanFragment - 스캔하기 layout 수정

--작업 예정 내역--
QR코드 스캔 시 결제 Dialog창을 띄워 결제 완료하기. (금액 차감부분까지)

--- a/app/src/main/res/layout/activity_find_password.xml
+++ b/app/src/main/res/layout/activity_find_password.xml
@@ -1,9 +1,234 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.find.password.FindPasswordActivity">
+    xmlns:tools="http://schemas.android.com/tools">
 
-</android.support.constraint.ConstraintLayout>
+    <data>
+
+        <variable
+            name="findPasswordActivity"
+            type="com.dutch.hdh.dutchpayapp.ui.find.password.FindPasswordActivity" />
+    </data>
+
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#f2f2f2"
+        tools:context=".ui.find.email.FindEmailActivity">
+
+
+        <android.support.constraint.ConstraintLayout
+            android:id="@+id/clAppBar"
+            android:layout_width="match_parent"
+            android:layout_height="62.67dp"
+            android:layout_marginLeft="17.14dp"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/malgunfont"
+                android:includeFontPadding="false"
+                android:text="비밀번호 찾기"
+                android:textColor="#2a2a2a"
+                android:textSize="18.85dp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/tvCancel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="17.14dp"
+                android:fontFamily="@font/malgunfont"
+                android:includeFontPadding="false"
+                android:text="취소"
+                android:textColor="#2a2a2a"
+                android:textSize="18.85dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <View
+                android:id="@+id/vCancel"
+                android:layout_width="70dp"
+                android:layout_height="match_parent"
+                app:layout_constraintRight_toRightOf="parent" />
+
+
+        </android.support.constraint.ConstraintLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:background="#dbd9da"
+            app:layout_constraintTop_toBottomOf="@+id/clAppBar" />
+
+
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginLeft="17.14dp"
+            android:layout_marginTop="28.85dp"
+            android:layout_marginRight="17.14dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/clAppBar">
+
+            <TextView
+                android:id="@+id/tvEmailText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="28.85dp"
+                android:fontFamily="@font/malgunfont"
+                android:includeFontPadding="false"
+                android:text="비밀번호를 찾기 위한 정보를 입력해 주세요."
+                android:textColor="#1e1e1e"
+                android:textSize="13.71dp"
+                android:textStyle="bold"
+                app:layout_constraintLeft_toLeftOf="parent" />
+
+            <EditText
+                android:id="@+id/etMyEmail"
+                android:layout_width="0dp"
+                android:layout_height="48dp"
+                android:layout_marginTop="6.85dp"
+                android:background="#ffffff"
+                android:fontFamily="@font/malgunfont"
+                android:gravity="center_vertical"
+                android:hint="이메일"
+                android:includeFontPadding="false"
+                android:paddingLeft="12.28dp"
+                android:textSize="13.71dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tvEmailText" />
+
+            <EditText
+                android:id="@+id/etName"
+                android:layout_width="0dp"
+                android:layout_height="48dp"
+                android:layout_marginTop="6.85dp"
+                android:background="#ffffff"
+                android:fontFamily="@font/malgunfont"
+                android:gravity="center_vertical"
+                android:hint="이름"
+                android:includeFontPadding="false"
+                android:paddingLeft="12.28dp"
+                android:textSize="13.71dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/etMyEmail" />
+
+            <LinearLayout
+                android:id="@+id/llLayout"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:layout_marginTop="6.85dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/etName">
+
+                <EditText
+                    android:id="@+id/etMyPhoneNumber"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginRight="3dp"
+                    android:layout_weight="7.5"
+                    android:background="#ffffff"
+                    android:fontFamily="@font/malgunfont"
+                    android:gravity="center_vertical"
+                    android:hint="핸드폰 번호"
+                    android:includeFontPadding="false"
+                    android:paddingLeft="12.28dp"
+                    android:textSize="13.71dp"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent" />
+
+                <Button
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="3dp"
+                    android:layout_weight="2.5"
+                    android:background="@color/buttonSelect"
+                    android:fontFamily="@font/malgunfont"
+                    android:includeFontPadding="false"
+                    android:text="인증번호 요청"
+                    android:textColor="#ffffff"
+                    android:textSize="14.85dp"
+                    android:textStyle="bold" />
+            </LinearLayout>
+
+            <EditText
+                android:id="@+id/etAuthNumber"
+                android:layout_width="0dp"
+                android:layout_height="48dp"
+                android:layout_marginTop="6.85dp"
+                android:background="#ffffff"
+                android:fontFamily="@font/malgunfont"
+                android:gravity="center_vertical"
+                android:hint="인증번호를 입력해 주세요."
+                android:includeFontPadding="false"
+                android:paddingLeft="12.28dp"
+                android:textSize="13.71dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/llLayout" />
+
+            <Button
+                android:id="@+id/btOK"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:layout_marginTop="6.85dp"
+                android:background="@color/buttonDefault"
+                android:fontFamily="@font/malgunfont"
+                android:includeFontPadding="false"
+                android:text="확인"
+                android:textColor="@color/textDefault"
+                android:textSize="18dp"
+                android:textStyle="bold"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/etAuthNumber" />
+
+            <View
+                android:id="@+id/vView"
+                android:layout_width="0dp"
+                android:layout_height="152dp"
+                android:layout_marginBottom="14.71dp"
+                android:background="#ffffff"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent" />
+
+            <LinearLayout
+                android:id="@+id/llPassword"
+                android:layout_width="0dp"
+                android:visibility="gone"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="16.28dp"
+                android:orientation="vertical"
+                app:layout_constraintBottom_toBottomOf="@+id/vView"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/vView">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="16.28dp"
+                    android:fontFamily="@font/malgunfont"
+                    android:includeFontPadding="false"
+                    android:text="회원님의 이메일로\n임시 비밀번호가 발송되었습니다."
+                    android:textColor="#1e1e1e"
+                    android:textSize="16.57dp" />
+
+            </LinearLayout>
+
+        </android.support.constraint.ConstraintLayout>
+    </android.support.constraint.ConstraintLayout>
+</layout>
