--- a/app/src/main/res/anim/fade_in.xml
+++ b/app/src/main/res/anim/fade_in.xml
@@ -2,4 +2,5 @@
     android:interpolator="@android:anim/accelerate_interpolator"
     android:fromAlpha="0.0"
     android:toAlpha="1.0"
-    android:duration="@android:integer/config_shortAnimTime" />
+    android:duration="@android:integer/config_shortAnimTime"
+    android:fillAfter="true"/>
