--- a/app/src/main/res/anim/fade_out.xml
+++ b/app/src/main/res/anim/fade_out.xml
@@ -2,4 +2,5 @@
     android:duration="@android:integer/config_shortAnimTime"
     android:fromAlpha="1.0"
     android:interpolator="@android:anim/accelerate_interpolator"
-    android:toAlpha="0.0" />
+    android:toAlpha="0.0"
+    android:fillAfter="true"/>
