--- a/app/src/main/res/layout/fragment_personal_payment_main.xml
+++ b/app/src/main/res/layout/fragment_personal_payment_main.xml
@@ -36,22 +36,23 @@
                 app:layout_constraintTop_toBottomOf="@+id/textView">
 
                 <LinearLayout
-                    android:id="@+id/llScan"
+                    android:id="@+id/llPaymentCode"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:background="@color/buttonSelect">
+                    android:background="#ffd336">
 
                     <TextView
-                        android:id="@+id/tvScan"
+                        android:id="@+id/tvPaymentCode"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:fontFamily="@font/malgunfont"
                         android:gravity="center"
                         android:includeFontPadding="false"
-                        android:text="스캔"
-                        android:textColor="#ffffff"
-                        android:textSize="15dp" />
+                        android:text="결제코드"
+                        android:textColor="#4d320a"
+                        android:textSize="15dp"
+                        android:textStyle="bold" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -70,51 +71,82 @@
                         android:includeFontPadding="false"
                         android:text="결제번호"
                         android:textColor="#5f5f5f"
-                        android:textSize="15dp" />
+                        android:textSize="15dp"
+                        android:textStyle="bold" />
                 </LinearLayout>
             </LinearLayout>
 
-            <LinearLayout
-                android:id="@+id/clScanView"
+            <android.support.constraint.ConstraintLayout
+                android:id="@+id/clPaymentCode"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
+                android:layout_marginTop="8.57dp"
+                android:layout_marginBottom="17.14dp"
                 android:orientation="vertical"
                 android:visibility="visible"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/llButtons">
 
-                <LinearLayout
-                    android:layout_width="match_parent"
+                <View
+                    android:id="@+id/vMain"
+                    android:layout_width="0dp"
+                    android:layout_height="343dp"
+                    android:background="#ffffff" />
+
+                <ImageView
+                    android:id="@+id/ivQRCode"
+                    android:layout_width="0dp"
                     android:layout_height="0dp"
-                    android:layout_weight="8">
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="@+id/vMiddleLine"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"/>
 
-                    <SurfaceView
-                        android:id="@+id/svCamera"
-                        android:layout_width="match_parent"
-                        android:layout_height="600.71dp"
-                        android:layout_centerInParent="true" />
-                </LinearLayout>
+                <View
+                    android:id="@+id/vMiddleLine"
+                    android:layout_width="0dp"
+                    android:layout_height="0.1dp"
+                    app:layout_constraintTop_toTopOf="@+id/vMain"
+                    app:layout_constraintBottom_toBottomOf="@+id/vMain"/>
 
-
-                <LinearLayout
-                    android:layout_width="match_parent"
+                <ImageView
+                    android:id="@+id/ivBarcode"
+                    android:layout_width="0dp"
                     android:layout_height="0dp"
-                    android:layout_weight="2">
+                    app:layout_constraintTop_toTopOf="@+id/vMiddleLine"
+                    app:layout_constraintBottom_toBottomOf="@+id/vMain"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"/>
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="29.14dp"
-                        android:fontFamily="@font/malgunfont"
-                        android:includeFontPadding="false"
-                        android:text="QR코드 및 바코드를 화면에 위치 시켜주세요."
-                        android:textColor="#2a2a2a"
-                        android:textSize="9.14dp"
-                        android:textStyle="bold" />
+                <TextView
+                    android:id="@+id/tvBarCodeNumber"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="8000 1234 5678 9012 3456 7890"
+                    android:textColor="#5b5b5b"
+                    android:textSize="10.85dp"
+                    android:textStyle="bold"
+                    android:fontFamily="@font/malgunfont"
+                    android:includeFontPadding="false"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintBottom_toBottomOf="@+id/vMain"
+                    android:layout_marginBottom="17.14dp"/>
 
-                </LinearLayout>
+                <Button
+                    android:id="@+id/btScan"
+                    android:layout_width="match_parent"
+                    android:layout_height="47.42dp"
+                    android:background="@color/buttonSelect"
+                    android:fontFamily="@font/malgunfont"
+                    android:includeFontPadding="false"
+                    android:text="스캔하기"
+                    android:textColor="#ffffff"
+                    android:textSize="18dp"
+                    android:textStyle="bold"
+                    app:layout_constraintBottom_toBottomOf="parent" />
 
-            </LinearLayout>
+            </android.support.constraint.ConstraintLayout>
 
 
             <android.support.constraint.ConstraintLayout
