--작업완료내용-- PersonalPayment_MainFragment - 기능구현 + API 연동완료 PersonalPayment_ScanFragment - 기능구현 + API 연동완료
--작업예정내용--
Register_FormFragment - 약관 선택시 해당 약관의 Layout부분을 터치해도 체크가 되도록 수정 작업 예정
PersonalPayment_ScanFragment , PersonalPayment_MainFragment - 결제 완료시 결제내역으로 이동
All - 버그테스트 후 안정화 작업 예정

--- a/app/src/main/res/layout/fragment_register_terms_conditions_agreement.xml
+++ b/app/src/main/res/layout/fragment_register_terms_conditions_agreement.xml
@@ -38,7 +38,119 @@
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView1" />
+            <!--clickLayout-->
+            <View
+                android:id="@+id/vAgreeAllTerm"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                app:layout_constraintLeft_toLeftOf="@+id/linearLayout"
+                app:layout_constraintRight_toRightOf="@+id/linearLayout"
+                app:layout_constraintTop_toTopOf="@+id/linearLayout"
+                app:layout_constraintBottom_toBottomOf="@+id/view"/>
 
+
+            <View
+                android:id="@+id/vAgreeTerm1"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                app:layout_constraintLeft_toLeftOf="@+id/linearLayout"
+                app:layout_constraintRight_toRightOf="@+id/linearLayout"
+                app:layout_constraintTop_toBottomOf="@+id/view"
+                app:layout_constraintBottom_toTopOf="@+id/vView1"/>
+
+            <View
+                android:id="@+id/vAgreeTerm2"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                app:layout_constraintLeft_toLeftOf="@+id/linearLayout"
+                app:layout_constraintRight_toRightOf="@+id/linearLayout"
+                app:layout_constraintTop_toBottomOf="@+id/vView1"
+                app:layout_constraintBottom_toTopOf="@+id/vView2"/>
+
+            <View
+                android:id="@+id/vAgreeTerm3"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                app:layout_constraintLeft_toLeftOf="@+id/linearLayout"
+                app:layout_constraintRight_toRightOf="@+id/linearLayout"
+                app:layout_constraintTop_toBottomOf="@+id/vView2"
+                app:layout_constraintBottom_toTopOf="@+id/vView3"/>
+
+            <View
+                android:id="@+id/vAgreeTerm4"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                app:layout_constraintLeft_toLeftOf="@+id/linearLayout"
+                app:layout_constraintRight_toRightOf="@+id/linearLayout"
+                app:layout_constraintTop_toBottomOf="@+id/vView3"
+                app:layout_constraintBottom_toTopOf="@+id/vView4"/>
+
+            <View
+                android:id="@+id/vAgreeTerm5"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                app:layout_constraintLeft_toLeftOf="@+id/linearLayout"
+                app:layout_constraintRight_toRightOf="@+id/linearLayout"
+                app:layout_constraintTop_toBottomOf="@+id/vView4"
+                app:layout_constraintBottom_toTopOf="@+id/vView5"/>
+
+            <View
+                android:id="@+id/vAgreeTerm6"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                app:layout_constraintLeft_toLeftOf="@+id/linearLayout"
+                app:layout_constraintRight_toRightOf="@+id/linearLayout"
+                app:layout_constraintTop_toBottomOf="@+id/vView5"
+                app:layout_constraintBottom_toBottomOf="@+id/linearLayout"/>
+            <!---->
+
+            <!--구분선-->
+            <View
+                android:id="@+id/vView1"
+                android:layout_width="match_parent"
+                android:layout_height="0.1dp"
+                app:layout_constraintLeft_toLeftOf="@+id/linearLayout"
+                app:layout_constraintRight_toRightOf="@+id/linearLayout"
+                app:layout_constraintTop_toBottomOf="@+id/cbTermsConditions1"
+                app:layout_constraintBottom_toTopOf="@+id/cbTermsConditions2"/>
+
+            <View
+                android:id="@+id/vView2"
+                android:layout_width="match_parent"
+                android:layout_height="0.1dp"
+                app:layout_constraintLeft_toLeftOf="@+id/linearLayout"
+                app:layout_constraintRight_toRightOf="@+id/linearLayout"
+                app:layout_constraintTop_toBottomOf="@+id/cbTermsConditions2"
+                app:layout_constraintBottom_toTopOf="@+id/cbTermsConditions3"/>
+
+            <View
+                android:id="@+id/vView3"
+                android:layout_width="match_parent"
+                android:layout_height="0.1dp"
+                app:layout_constraintLeft_toLeftOf="@+id/linearLayout"
+                app:layout_constraintRight_toRightOf="@+id/linearLayout"
+                app:layout_constraintTop_toBottomOf="@+id/cbTermsConditions3"
+                app:layout_constraintBottom_toTopOf="@+id/cbTermsConditions4"/>
+
+            <View
+                android:id="@+id/vView4"
+                android:layout_width="match_parent"
+                android:layout_height="0.1dp"
+                app:layout_constraintLeft_toLeftOf="@+id/linearLayout"
+                app:layout_constraintRight_toRightOf="@+id/linearLayout"
+                app:layout_constraintTop_toBottomOf="@+id/cbTermsConditions4"
+                app:layout_constraintBottom_toTopOf="@+id/cbTermsConditions5"/>
+
+            <View
+                android:id="@+id/vView5"
+                android:layout_width="match_parent"
+                android:layout_height="0.1dp"
+                app:layout_constraintLeft_toLeftOf="@+id/linearLayout"
+                app:layout_constraintRight_toRightOf="@+id/linearLayout"
+                app:layout_constraintTop_toBottomOf="@+id/cbTermsConditions5"
+                app:layout_constraintBottom_toTopOf="@+id/cbTermsConditions6"/>
+
+            <!---->
             <CheckBox
                 android:id="@+id/cbCompleteAgreement"
                 android:layout_width="wrap_content"
