--- a/app/src/main/res/layout/activity_my_page_withdrawal.xml
+++ b/app/src/main/res/layout/activity_my_page_withdrawal.xml
@@ -100,6 +100,7 @@
                     app:layout_constraintTop_toTopOf="@+id/vTop" />
 
                 <TextView
+                    android:id="@+id/tvRefundAmount"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="10.28dp"
