--- a/app/src/main/res/layout/fragment_personal_payment_main.xml
+++ b/app/src/main/res/layout/fragment_personal_payment_main.xml
@@ -130,8 +130,8 @@
                     android:includeFontPadding="false"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintBottom_toBottomOf="@+id/vMain"
-                    android:layout_marginBottom="17.14dp"/>
+                    android:layout_marginBottom="10dp"
+                    app:layout_constraintBottom_toBottomOf="@+id/ivBarcode"/>
 
                 <Button
                     android:id="@+id/btScan"
